classDiagram
    class ParticipantActivityController {
        <<controller>>
        +index()
        +receipt(id)
        +certificate(id)
    }
    class AdminReportController {
        <<controller>>
        +index()
        +download()
        +downloadFundraisingReport()
        +downloadEngagementReport()
    }
    class Notification {
        -notification_id: int [key]
        -user_type: string
        -user_id: int
        -type: string
        -title: string
        -message: string
        -icon: string
        -action_url: string
        -read_at: datetime
        +scopeForAdmin()
        +scopeForParticipant()
        +scopeUnread()
        +notifyAllAdmins()
        +notifyParticipant()
        +notifyAllParticipants()
    }
    
    ParticipantActivityController ..> Notification : triggers / views >
    AdminReportController ..> Notification : creates (via actions) >
